--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="message"></div>
   <div id="countdown"></div>
   <div id="final-text"></div>
-  <img id="surprise-img" src="https://i.imgur.com/0w2I0Fj.jpg" alt="Kitten and Puppy Hug" style="display:none;">
+  <img id="surprise-img" src="https://t3.ftcdn.net/jpg/06/80/96/00/360_F_680960039_72zSgQ8UjLEFJRufN8ZzcN4d61HM5ryj.jpg" alt="Kitten and Puppy Hug" style="display:none;">
   <img id="kitten-gif" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Kitten GIF" style="display:none;">
   
   <script src="script.js"></script>
