--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Valentine's Surprise</title>
+  <title>Will you be my Valentine?</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Will you be my Valentine?</h1>
-  <button id="yes">YES!</button>
-  <button id="no">No.</button>
-
-  <div id="message"></div>
-  <div id="countdown"></div>
-  <div id="final-text"></div>
-  <img id="surprise-img" src="https://t3.ftcdn.net/jpg/06/80/96/00/360_F_680960039_72zSgQ8UjLEFJRufN8ZzcN4d61HM5ryj.jpg" alt="Kitten and Puppy Hug" style="display:none;">
-  <img id="kitten-gif" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Kitten GIF" style="display:none;">
-  
+  <canvas id="heartCanvas"></canvas>
+  <h1 id="valentineText">Will you be my Valentine?</h1>
   <script src="script.js"></script>
 </body>
 </html>
