--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Will you be my Valentine?</title>
+  <title>Valentine's Surprise</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <canvas id="heartCanvas"></canvas>
   <h1 id="valentineText">Will you be my Valentine?</h1>
+
+  <div id="buttons">
+    <button id="yesBtn">✅</button>
+    <button id="noBtn">❌</button>
+  </div>
+
+  <div id="bottomMessage"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
