--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
   <canvas id="heartCanvas"></canvas>
-  <h1 id="valentineText">Will you be my Valentine?</h1>
 
-  <div id="buttons">
-    <button id="yesBtn">✅</button>
-    <button id="noBtn">❌</button>
+  <!-- wrapper for vertically centered content -->
+  <div id="centerContent">
+    <h1 id="valentineText">Will you be my Valentine?</h1>
+    <div id="buttons">
+      <button id="yesBtn">✅</button>
+      <button id="noBtn">❌</button>
+    </div>
   </div>
 
   <div id="bottomMessage"></div>
