--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Valentine's Surprise</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- Bebas Neue for Yes message -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <canvas id="heartCanvas"></canvas>
 
-  <!-- wrapper for vertically centered content -->
+  <!-- center area -->
   <div id="centerContent">
     <h1 id="valentineText">Will you be my Valentine?</h1>
     <div id="buttons">
