--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valentine's Surprise</title>
+  <title>Hmmm...</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,6 +29,10 @@
   <!-- Audio -->
   <audio id="bgMusic" loop>
     <source src="cute.mp3" type="audio/mpeg">
+  </audio>
+
+  <audio id="thunderSound">
+    <source src="thunder.mp3" type="audio/mpeg">
   </audio>
 
   <script src="script.js"></script>
